# bc-duplicate

./: .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build  meson_options.txt
.github/workflows/: release.yml
debian/: changelog  control  copyright
docs/: benchmarks.md
fuzzing/: fuzz_bc_duplicate_cli_parse.c  fuzz_bc_duplicate_filter.c  meson.build
include/internal/: bc_duplicate_cli_internal.h  bc_duplicate_dirent_internal.h  bc_duplicate_discovery_internal.h  bc_duplicate_dispatch_decision_internal.h  bc_duplicate_error_internal.h  bc_duplicate_filter_internal.h  bc_duplicate_grouping_internal.h  bc_duplicate_output_internal.h  bc_duplicate_reader_internal.h  bc_duplicate_strings_internal.h  bc_duplicate_throughput_internal.h  bc_duplicate_types_internal.h  bc_duplicate_worker_internal.h  bc_duplicate_worker_sort_internal.h
scripts/: bench.sh  correctness-3way.sh
src/: bc_duplicate_main.c  meson.build
src/bench/: bc_duplicate_dispatch_decision.c  bc_duplicate_throughput.c  bc_duplicate_throughput_cache.c
src/cli/: bc_duplicate_cli_spec.c
src/discovery/: bc_duplicate_dirent.c  bc_duplicate_discovery_glob.c  bc_duplicate_discovery_walk.c  bc_duplicate_discovery_walk_parallel.c
src/error/: bc_duplicate_error_collector.c
src/filter/: bc_duplicate_filter.c
src/grouping/: bc_duplicate_grouping_by_fast_hash.c  bc_duplicate_grouping_by_full_hash.c  bc_duplicate_grouping_by_size.c
src/output/: bc_duplicate_output_json.c  bc_duplicate_output_simple.c
src/worker/: bc_duplicate_worker_batch_sync.c  bc_duplicate_worker_batch_uring.c  bc_duplicate_worker_fast.c  bc_duplicate_worker_full.c  bc_duplicate_worker_reader.c  bc_duplicate_worker_sort.c
tests/: meson.build  test_bc_duplicate_cli_spec_unit.c  test_bc_duplicate_discovery_e2e.c  test_bc_duplicate_dispatch_decision.c  test_bc_duplicate_filter_unit.c  test_bc_duplicate_grouping_unit.c  test_bc_duplicate_output_unit.c  test_bc_duplicate_reader_ring_growth.c  test_bc_duplicate_throughput.c  test_bc_duplicate_worker_sort_unit.c
